# aula_17_aovivo

./: README.md  desafio.py  exemplo_01.py  meubanco.db  pyproject.toml
