[tool.poetry]
name = "aula-17-aovivo"
version = "0.1.0"
description = "meu projeto de API"
authors = ["luciano"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.28"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
